<package>
 <name>s8_wall_follower_controller</name>
  <version>0.0.0</version>
  <description>
    Wall follower controlle
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_motors</url>

  <author email="lwiener@kth.se">Lucas</author>
  <maintainer email="lwiener@kth.se">Lucas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>s8_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>s8_common_node</build_depend>
  <build_depend>s8_motor_controller</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>s8_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>s8_common_node</run_depend>
  <run_depend>s8_motor_controller</run_depend>

</package>
